--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "i18n": "^0.15.0",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16",
     "vuex": "^4.0.2"
   },
